tests/snapshots/files__implicit-return-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@pow(v0: int, v1: int) {
.v2_:
  v3_: int = const 0;
  v4_: int = id v0;
  v5_: int = id v3_;
  v6_: int = id v0;
  v7_: int = id v1;
.v8_:
  v9_: int = const 1;
  v10_: int = sub v7_ v9_;
  v11_: bool = lt v5_ v10_;
  v12_: int = id v4_;
  v13_: int = id v5_;
  v14_: int = id v6_;
  v15_: int = id v7_;
  br v11_ .v16_ .v17_;
.v16_:
  v18_: int = mul v4_ v6_;
  v19_: int = const 1;
  v20_: int = add v19_ v5_;
  v12_: int = id v18_;
  v13_: int = id v20_;
  v14_: int = id v6_;
  v15_: int = id v7_;
  v4_: int = id v12_;
  v5_: int = id v13_;
  v6_: int = id v14_;
  v7_: int = id v15_;
  jmp .v8_;
.v17_:
  v4_: int = id v12_;
  v5_: int = id v13_;
  v6_: int = id v14_;
  v7_: int = id v15_;
  print v4_;
}
@main {
.v0_:
  v1_: bool = const true;
  v2_: int = const 16;
  v3_: int = const 1;
  v4_: int = const 4;
  v5_: int = const 15;
  v6_: int = id v2_;
  v7_: int = id v3_;
  v8_: int = id v4_;
  v9_: int = id v5_;
  v10_: int = id v2_;
  v11_: int = id v3_;
  v12_: int = id v4_;
  v13_: int = id v5_;
.v14_:
  v15_: int = const 14;
  v16_: bool = lt v11_ v15_;
  v17_: int = id v10_;
  v18_: int = id v11_;
  v19_: int = id v12_;
  v20_: int = id v13_;
  br v16_ .v21_ .v22_;
.v21_:
  v23_: int = mul v10_ v12_;
  v24_: int = const 1;
  v25_: int = add v11_ v24_;
  v17_: int = id v23_;
  v18_: int = id v25_;
  v19_: int = id v12_;
  v20_: int = id v13_;
  v10_: int = id v17_;
  v11_: int = id v18_;
  v12_: int = id v19_;
  v13_: int = id v20_;
  jmp .v14_;
.v22_:
  v10_: int = id v17_;
  v11_: int = id v18_;
  v12_: int = id v19_;
  v13_: int = id v20_;
  v6_: int = id v10_;
  v7_: int = id v11_;
  v8_: int = id v12_;
  v9_: int = id v13_;
  print v6_;
}
