tests/snapshots/files__impossible_if-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: int) {
.v1_:
  v2_: int = const 1;
  v3_: int = const 2;
  v4_: bool = lt v0 v3_;
  br v4_ .v5_ .v6_;
.v6_:
  print v2_;
  v7_: int = id v2_;
  print v2_;
  ret;
.v5_:
  print v2_;
  v7_: int = id v2_;
.v8_:
  print v2_;
}
