tests/snapshots/files__loop_strength_reduction-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  c2_: int = const 1;
  c3_: int = const 5;
  c4_: int = const 300;
  v5_: int = id c1_;
  v6_: int = id c2_;
  v7_: int = id c1_;
  v8_: int = id c3_;
  v9_: int = id c4_;
.b10_:
<<<<<<< HEAD
  v11_: int = mul v7_ v8_;
  print v11_;
  v12_: int = add v5_ v6_;
  v13_: int = add v6_ v7_;
  v14_: bool = lt v12_ v9_;
  v5_: int = id v12_;
=======
<<<<<<< HEAD
  v11_: int = add v6_ v7_;
  v12_: int = add v11_ v6_;
  v13_: int = add v12_ v6_;
  v14_: int = mul v13_ v8_;
  v15_: int = mul v12_ v8_;
  v16_: int = mul v11_ v8_;
  v17_: int = mul v7_ v8_;
  print v17_;
  print v16_;
  print v15_;
  print v14_;
  v18_: int = add v5_ v6_;
  v19_: int = add v18_ v6_;
  v20_: int = add v19_ v6_;
  v21_: int = add v20_ v6_;
  v22_: int = add v13_ v6_;
  v23_: bool = lt v21_ v9_;
  v5_: int = id v21_;
>>>>>>> 1d1f4930 (snapshots)
  v6_: int = id v6_;
  v7_: int = id v13_;
  v8_: int = id v8_;
  v9_: int = id v9_;
<<<<<<< HEAD
  br v14_ .b10_ .b15_;
.b15_:
=======
  br v23_ .b10_ .b24_;
.b24_:
=======
  v11_: bool = lt v5_ v9_;
  v12_: int = id v5_;
  v13_: int = id v6_;
  v14_: int = id v7_;
  v15_: int = id v8_;
  br v11_ .b16_ .b17_;
.b16_:
  v18_: int = mul v7_ v8_;
  print v18_;
  v19_: int = add v5_ v6_;
  v20_: int = add v6_ v7_;
  v12_: int = id v19_;
  v13_: int = id v6_;
  v14_: int = id v20_;
  v15_: int = id v8_;
  v5_: int = id v12_;
  v6_: int = id v6_;
  v7_: int = id v14_;
  v8_: int = id v8_;
  v9_: int = id v9_;
  jmp .b10_;
.b17_:
  v5_: int = id v12_;
  v6_: int = id v6_;
  v7_: int = id v14_;
  v8_: int = id v8_;
  v9_: int = id v9_;
>>>>>>> bd5b3865 (snapshots)
>>>>>>> 1d1f4930 (snapshots)
  ret;
}
