tests/snapshots/files__loop_strength_reduction_modified-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 
@main {
.b0_:
  c1_: int = const 0;
  c2_: int = const 1;
  c3_: int = const 3;
  c4_: int = const 150;
  c5_: int = const 5;
  c6_: int = const 300;
  v7_: int = id c1_;
  v8_: int = id c2_;
  v9_: int = id c1_;
  v10_: int = id c3_;
  v11_: int = id c4_;
  v12_: int = id c5_;
  v13_: int = id c6_;
.b14_:
<<<<<<< HEAD
  v15_: int = mul v12_ v9_;
  print v15_;
  v16_: int = add v7_ v8_;
  v17_: bool = eq v11_ v7_;
  v18_: int = add v8_ v9_;
  v19_: int = add v10_ v18_;
  v20_: int = select v17_ v19_ v18_;
  v21_: bool = lt v16_ v13_;
  v7_: int = id v16_;
  v8_: int = id v8_;
  v9_: int = id v20_;
=======
<<<<<<< HEAD
  v15_: int = add v7_ v8_;
  v16_: int = add v15_ v8_;
  v17_: bool = eq v11_ v16_;
  v18_: bool = eq v11_ v15_;
  v19_: bool = eq v11_ v7_;
  v20_: int = add v8_ v9_;
  v21_: int = add v10_ v20_;
  v22_: int = select v19_ v21_ v20_;
  v23_: int = add v22_ v8_;
  v24_: int = add v10_ v23_;
  v25_: int = select v18_ v24_ v23_;
  v26_: int = add v25_ v8_;
  v27_: int = add v10_ v26_;
  v28_: int = select v17_ v27_ v26_;
  v29_: int = mul v12_ v28_;
  v30_: int = mul v12_ v25_;
  v31_: int = mul v12_ v22_;
  v32_: int = mul v12_ v9_;
  print v32_;
  print v31_;
  print v30_;
  print v29_;
  v33_: int = add v16_ v8_;
  v34_: int = add v33_ v8_;
  v35_: bool = eq v11_ v33_;
  v36_: int = add v28_ v8_;
  v37_: int = add v10_ v36_;
  v38_: int = select v35_ v37_ v36_;
  v39_: bool = lt v34_ v13_;
  v7_: int = id v34_;
  v8_: int = id v8_;
  v9_: int = id v38_;
=======
  v15_: bool = lt v7_ v13_;
  v16_: int = id v7_;
  v17_: int = id v8_;
  v18_: int = id v9_;
  v19_: int = id v10_;
  v20_: int = id v11_;
  v21_: int = id v12_;
<<<<<<< HEAD
  v22_: int = id v13_;
  br v15_ .b23_ .b24_;
.b23_:
  v25_: int = mul v12_ v9_;
  print v25_;
  v26_: int = add v7_ v8_;
  v27_: bool = eq v11_ v7_;
  v28_: int = add v8_ v9_;
  v29_: int = add v10_ v28_;
  v30_: int = select v27_ v29_ v28_;
  v16_: int = id v26_;
  v17_: int = id v8_;
  v18_: int = id v30_;
=======
  br v15_ .b22_ .b23_;
.b22_:
  v24_: int = mul v12_ v9_;
  print v24_;
  v25_: int = add v7_ v8_;
  v26_: bool = eq v11_ v7_;
  v27_: int = add v8_ v9_;
  v28_: int = id v7_;
  v29_: int = id v27_;
  v30_: int = id v10_;
  v31_: int = id v12_;
  br v26_ .b32_ .b33_;
.b32_:
  v34_: int = add v10_ v27_;
  v28_: int = id v7_;
  v29_: int = id v34_;
  v30_: int = id v10_;
  v31_: int = id v12_;
  v16_: int = id v25_;
  v17_: int = id v8_;
  v18_: int = id v29_;
  v19_: int = id v10_;
  v20_: int = id v11_;
  v21_: int = id v12_;
  v7_: int = id v16_;
  v8_: int = id v8_;
  v9_: int = id v18_;
>>>>>>> bd5b3865 (snapshots)
>>>>>>> 1d1f4930 (snapshots)
  v10_: int = id v10_;
  v11_: int = id v11_;
  v12_: int = id v12_;
  v13_: int = id v13_;
<<<<<<< HEAD
  br v21_ .b14_ .b22_;
.b22_:
=======
<<<<<<< HEAD
  br v39_ .b14_ .b40_;
.b40_:
=======
  br v15_ .b14_ .b35_;
.b35_:
>>>>>>> bd5b3865 (snapshots)
>>>>>>> 1d1f4930 (snapshots)
  ret;
  jmp .b36_;
.b33_:
  v16_: int = id v25_;
  v17_: int = id v8_;
  v18_: int = id v29_;
>>>>>>> f4e994eb (snapshots)
  v19_: int = id v10_;
  v20_: int = id v11_;
  v21_: int = id v12_;
  v7_: int = id v16_;
  v8_: int = id v8_;
  v9_: int = id v18_;
  v10_: int = id v10_;
  v11_: int = id v11_;
  v12_: int = id v12_;
  v13_: int = id v13_;
  jmp .b14_;
.b23_:
  v7_: int = id v16_;
  v8_: int = id v8_;
  v9_: int = id v18_;
  v10_: int = id v10_;
  v11_: int = id v11_;
  v12_: int = id v12_;
  v13_: int = id v13_;
  ret;
<<<<<<< HEAD
=======
.b36_:
>>>>>>> f4e994eb (snapshots)
}
