tests/snapshots/files__mem_loop_store_forwarding-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: bool) {
.v1_:
  v2_: int = const 3;
  v3_: ptr<int> = alloc v2_;
  v4_: int = const 1;
  v5_: ptr<int> = ptradd v3_ v4_;
  v6_: int = const 2;
  v7_: ptr<int> = ptradd v3_ v6_;
  v8_: ptr<int> = id v5_;
  v9_: ptr<int> = id v3_;
  v10_: ptr<int> = id v7_;
  v11_: bool = id v0;
  v8_: ptr<int> = id v9_;
  v9_: ptr<int> = id v8_;
  v10_: ptr<int> = id v10_;
  v11_: bool = id v11_;
  br v11_ .v12_ .v13_;
.v12_:
  v8_: ptr<int> = id v9_;
  v9_: ptr<int> = id v8_;
  v10_: ptr<int> = id v10_;
  v11_: bool = id v11_;
  jmp .v12_;
.v13_:
  v14_: int = const 10;
  v15_: int = const 20;
  store v9_ v14_;
  store v10_ v15_;
  v16_: int = load v9_;
  print v14_;
  free v8_;
}
