tests/snapshots/files__mem_simple_redundant_load-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main(v0: bool) {
.v1_:
  v2_: int = const 1;
  v3_: ptr<int> = alloc v2_;
  br v0 .v4_ .v5_;
.v5_:
  v6_: int = const 3;
  store v3_ v6_;
  v7_: ptr<int> = id v3_;
  v8_: int = load v3_;
  v9_: int = load v3_;
  print v8_;
  free v3_;
  ret;
.v4_:
  v10_: int = const 2;
  store v3_ v10_;
  v7_: ptr<int> = id v3_;
.v11_:
  v8_: int = load v3_;
  v9_: int = load v3_;
  print v8_;
  free v3_;
}
