tests/snapshots/files__range_check-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.v0_:
  v1_: bool = const true;
  v2_: int = const 1;
  print v2_;
  v3_: int = id v2_;
  br v1_ .v4_ .v5_;
.v4_:
  v6_: int = id v2_;
.v7_:
  v8_: int = const 6;
  v9_: bool = lt v6_ v8_;
  v10_: int = const 5;
  v11_: bool = lt v6_ v10_;
  br v11_ .v12_ .v13_;
.v13_:
  v14_: int = const 2;
  print v14_;
  v15_: int = id v6_;
.v16_:
  v17_: int = const 1;
  v18_: int = add v17_ v6_;
  v19_: int = id v18_;
  br v9_ .v20_ .v21_;
.v21_:
  v6_: int = id v19_;
  v3_: int = id v6_;
  print v3_;
  ret;
.v20_:
  v19_: int = id v18_;
  v6_: int = id v19_;
  jmp .v7_;
.v12_:
  v22_: int = const 1;
  print v22_;
  v15_: int = id v6_;
  jmp .v16_;
.v5_:
  print v3_;
}
