tests/snapshots/files__range_splitting-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@main {
.v0_:
  v1_: bool = const true;
  v2_: int = const 1;
  print v2_;
  v3_: int = id v2_;
  br v1_ .v4_ .v5_;
.v4_:
  v6_: int = id v2_;
.v7_:
  v8_: int = const 1;
  v9_: int = add v6_ v8_;
  v10_: int = const 5;
  v11_: bool = lt v9_ v10_;
  v12_: bool = lt v6_ v10_;
  br v12_ .v13_ .v14_;
.v14_:
  v15_: int = const 2;
  print v15_;
  v16_: int = id v6_;
.v17_:
  v18_: int = id v9_;
  br v11_ .v19_ .v20_;
.v20_:
  v6_: int = id v18_;
  v3_: int = id v6_;
  print v3_;
  ret;
.v19_:
  v18_: int = id v9_;
  v6_: int = id v18_;
  jmp .v7_;
.v13_:
  v21_: int = const 1;
  print v21_;
  v16_: int = id v6_;
  jmp .v17_;
.v5_:
  print v3_;
}
