tests/snapshots/files__recurse_once-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@to_zero(v0: int): int {
.v1_:
  v2_: int = const 0;
  v3_: bool = lt v2_ v0;
  v4_: int = id v0;
  br v3_ .v5_ .v6_;
.v5_:
  v7_: int = const 0;
  v8_: int = const 1;
  v9_: int = sub v0 v8_;
  v10_: bool = lt v7_ v9_;
  v11_: int = id v9_;
  br v10_ .v12_ .v13_;
.v13_:
  v4_: int = id v11_;
  ret v4_;
.v12_:
  v14_: int = const 0;
  v15_: int = const 1;
  v16_: int = sub v9_ v15_;
  v17_: bool = lt v14_ v16_;
  v18_: int = id v16_;
  br v17_ .v19_ .v20_;
.v20_:
  v11_: int = id v18_;
  jmp .v13_;
.v19_:
  v21_: int = const 1;
  v22_: int = sub v16_ v21_;
  v23_: int = call @to_zero v22_;
  v18_: int = id v23_;
  jmp .v20_;
.v6_:
  ret v4_;
}
@main {
.v0_:
  v1_: int = const 0;
  print v1_;
}
