tests/snapshots/files__simple_recursive-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
@inc(v0: int): int {
.v1_:
  v2_: int = const 2;
  v3_: bool = lt v0 v2_;
  v4_: int = id v0;
  br v3_ .v5_ .v6_;
.v5_:
  v7_: int = const 1;
  v8_: int = add v0 v7_;
  v9_: int = const 2;
  v10_: bool = lt v8_ v9_;
  print v8_;
  v11_: int = id v8_;
  br v10_ .v12_ .v13_;
.v13_:
  v4_: int = id v11_;
  ret v4_;
.v12_:
  v14_: int = const 1;
  v15_: int = add v14_ v8_;
  v16_: int = const 2;
  v17_: bool = lt v15_ v16_;
  print v15_;
  v18_: int = id v15_;
  br v17_ .v19_ .v20_;
.v20_:
  v11_: int = id v18_;
  jmp .v13_;
.v19_:
  v21_: int = const 1;
  v22_: int = add v15_ v21_;
  print v22_;
  v23_: int = call @inc v22_;
  v18_: int = id v23_;
  jmp .v20_;
.v6_:
  ret v4_;
}
@main {
.v0_:
  v1_: int = const 2;
  v2_: int = const 1;
  print v2_;
  print v1_;
  v3_: int = call @inc v1_;
  print v3_;
}
